SERVER-15821 Empty host split assertion message in log when maxSize prevents move chunk